// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RocketFormGroup <QuestionChoices /> renders correctly 1`] = `
.c0 {
  font-family: 'Roboto',serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 label {
  padding: .25rem;
  font-weight: bold;
  font-size: 1.3rem;
  margin-bottom: .5rem;
}

.c0 .requiredFields {
  color: red;
  margin-bottom: .5rem;
}

.c0 input[name="title"] {
  border: 0.5px solid #A9A9A9;
  width: 50%;
  min-height: 2rem;
  border-radius: 0.25rem;
  padding: .25rem;
}

.c1 {
  width: 100%;
  min-height: 4rem;
  border-radius: 0.25rem;
  padding: .25rem;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  width: 100%;
}

.c3 input[type="text"] {
  border-radius: 0.25rem;
  border: 0.5px solid #A9A9A9;
  width: 91%;
  min-height: 2rem;
  padding: .25rem .5rem;
  margin: .25rem;
}

.c3 input[type="radio"] {
  padding: .25rem;
}

.c2 {
  color: red;
  font-size: .8rem;
  height: 1rem;
  margin-bottom: 1rem;
}

@media (max-width:600px) {
  .c3 {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
  }
}

<section>
  <div
    className="c0"
  >
    <label
      htmlFor="tm.explanation"
    >
      Two Months - Review Text
    </label>
    <textarea
      aria-describedby="tm-explanation-ErrorDescription"
      className="c1"
      name="tm.explanation"
      onChange={undefined}
      placeholder="Two Day Review Text"
      value=""
    />
    <div
      className="c2"
      id="tm-explanation-ErrorDescription"
    />
  </div>
  <div
    className="c0"
  >
    <label
      htmlFor="tm.question"
    >
      Two Months - Review Question
    </label>
    <textarea
      aria-describedby="tm-question-ErrorDescription"
      className="c1"
      name="tm.question"
      onChange={undefined}
      placeholder="Two Day Review Text"
      value={undefined}
    />
    <div
      className="c2"
      id="tm-question-ErrorDescription"
    />
  </div>
  <div
    className="c3"
  >
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[0].text"
        onChange={undefined}
        placeholder="Answer 1"
        type="text"
        value=""
      />
    </label>
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[1].text"
        onChange={undefined}
        placeholder="Answer 2"
        type="text"
        value=""
      />
    </label>
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[2].text"
        onChange={undefined}
        placeholder="Answer 3"
        type="text"
        value=""
      />
    </label>
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[3].text"
        onChange={undefined}
        placeholder="Answer 4"
        type="text"
        value=""
      />
    </label>
  </div>
  <div
    className="c2"
    id="tm-correct-ErrorDescription"
  />
</section>
`;

exports[`RocketFormGroup testing styled components render <Blurb /> renders correctly 1`] = `
.c0 {
  width: 100%;
  min-height: 4rem;
  border-radius: 0.25rem;
  padding: .25rem;
  margin: 1rem 0;
  text-align: justify;
  font-size: 1.1rem;
}

<p
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <ErrorText /> renders correctly 1`] = `
.c0 {
  color: red;
  font-size: .8rem;
  height: 1rem;
  margin-bottom: 1rem;
}

<div
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <FormGroup /> renders correctly 1`] = `
.c0 {
  font-family: 'Roboto',serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 label {
  padding: .25rem;
  font-weight: bold;
  font-size: 1.3rem;
  margin-bottom: .5rem;
}

.c0 .requiredFields {
  color: red;
  margin-bottom: .5rem;
}

.c0 input[name="title"] {
  border: 0.5px solid #A9A9A9;
  width: 50%;
  min-height: 2rem;
  border-radius: 0.25rem;
  padding: .25rem;
}

<div
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <QuestionWrapper /> renders correctly 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  width: 100%;
}

.c0 input[type="text"] {
  border-radius: 0.25rem;
  border: 0.5px solid #A9A9A9;
  width: 91%;
  min-height: 2rem;
  padding: .25rem .5rem;
  margin: .25rem;
}

.c0 input[type="radio"] {
  padding: .25rem;
}

@media (max-width:600px) {
  .c0 {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
  }
}

<div
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <TextArea /> renders correctly 1`] = `
.c0 {
  width: 100%;
  min-height: 4rem;
  border-radius: 0.25rem;
  padding: .25rem;
}

<textarea
  className="c0"
/>
`;
